Fixes for UI layout to make game playable on mobile

--- a/client/src/components/Cards/card.module.css
+++ b/client/src/components/Cards/card.module.css
@@ -1,6 +1,12 @@
 .card {
   filter: drop-shadow(11px 13px 6px #6b7777);
   margin: 5px;
+  max-width: 100%;
+  min-width: 20px;
+  max-height: 168px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
   transition: 0.2s;
 }
 .card:hover {
@@ -13,6 +19,10 @@
   position: relative;
   left: 5px;
   margin: 5px;
+  max-width: 100%;
+  max-height: 168px;
+  width: auto;
+  height: auto;
   transition: 0.2s;
 }
 .cardNoShadow:hover {
